apps/librespeed/librespeed-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: librespeed
  name: librespeed
  namespace: toolbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: librespeed
  template:
    metadata:
      labels:
        app: librespeed
    spec:
      containers:
      - image: ghcr.io/librespeed/speedtest:6.2-alpine
        name: librespeed
        resources:
          limits:
            cpu: 100m
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 64Mi
